@@ -1,8 +1,10 @@
 VERSION 0.20 (2017-11-??)
   * Caching of available packages from each repository to build faster with CLI.
   * While building project packages it detects changes in package sources.
-    If no changes detected package will not be rebuilt and package from intrepo
-    will be installed.
+     If no changes detected package will not be rebuilt and package from intrepo
+     will be installed.
+  * Remote packages downloaded are cached. So next time they are ready which
+     reduces dependency collection time.
 
 VERSION 0.19 (2017-11-23)
   * Detection imports in package NAMESPACE fixed to support comma separated lists.
